<resources>
    <string name="app_name">Lesson2_homeWork</string>
    <string name="header_name">Header Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="question_about_day">Preferred day of the week</string>
    <string name="monday">Monday</string>
    <string name="wednesday">Wednesday</string>
    <string name="friday">Friday</string>
    <string name="agree_of_terms">Agree to terms</string>
    <string name="submit">Submit</string>

</resources>
